<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/caldroid_lighter_gray"
        android:fitsSystemWindows="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">
            <!--android:theme="@style/AppTheme.AppBarOverlay">-->

            <LinearLayout
                android:id="@+id/toolbar_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_scrollFlags="enterAlways">


                <ImageButton
                    android:id="@+id/cancelButton"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription=""
                    android:foregroundGravity="center"
                    android:tint="@color/white"
                    android:tintMode="src_in"
                    app:srcCompat="@android:drawable/ic_delete" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/transaction_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />


            </LinearLayout>

            <Space
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="bottom|end" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/coordinator"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/activity_new_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:background="@color/background_solig_gray"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/monto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:hint="Monto"
                        android:inputType="number|numberSigned|numberDecimal"
                        android:maxLines="1"
                        android:text="-0.0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textStyle="normal|bold"
                        android:windowSoftInputMode="stateUnchanged" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/background_solig_gray"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:spinnerMode="dialog"
                    app:layout_constraintHorizontal_bias="0.0"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/toggleButton"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    tools:listfooter="@layout/spinner_dropdown_item"
                    tools:listheader="@layout/spinner_dropdown_item"
                    tools:listitem="@layout/spinner_dropdown_item" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:paddingBottom="8dp"
                    android:background="@color/background_solig_gray"
                    android:elevation="4dp"
                    android:paddingRight="16dp"
                    android:textOff="@string/Gasto"
                    android:textOn="@string/Income"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinner"
                    app:paddingEnd="16dp" />


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner">

                    <TextView

                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:text="@string/fecha_escoger" />

                    <CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/background_solig_gray" />

                    <TextView
                        android:id="@+id/facturasText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/calendarView"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/facturas" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_facturas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/facturasText"
                        android:background="@color/background_solig_gray" />

                    <!--<android.support.v7.widget.AppCompatTextView
                        android:id="@+id/add_note"
                        android:text="@string/add_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/recycler_facturas"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp" />-->

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/recycler_facturas"

                        android:layout_marginTop="8dp">

                        <!--android:layout_below="@+id/add_note"-->
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/background_solig_gray"
                            android:capitalize="sentences"
                            android:elevation="4dp"
                            android:freezesText="true"
                            android:gravity="top"
                            android:hint="@string/add_note"
                            android:inputType="textMultiLine"
                            android:lines="4"
                            android:maxLines="4"
                            android:paddingEnd="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"

                            android:paddingStart="16dp"
                            android:selectAllOnFocus="false"
                            android:text=""
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"

                            android:textSize="14sp"
                            android:textStyle="normal|italic"
                            android:windowSoftInputMode="stateUnchanged" />
                    </android.support.design.widget.TextInputLayout>


                    <TextView
                        android:id="@+id/TextView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/note"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/not_supported_yet" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/add_repetition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/TextView4"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/repetition" />

                    <Spinner
                        android:background="@color/background_solig_gray"
                        android:id="@+id/repetition_spinner"
                        android:layout_width="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/add_repetition" />

                    <TextView
                        android:id="@+id/add_notification"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/repetition_spinner"
                        android:text="@string/add_notification" />
                </RelativeLayout>


            </android.support.constraint.ConstraintLayout>
        </ScrollView>


    </android.support.design.widget.CoordinatorLayout>

</layout>
