<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="io.github.rathn.platap.NewCategoryActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_scrollFlags="enterAlways">

                <ImageButton
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_delete"
                    android:id="@+id/cancelButton"
                    android:background="@android:color/transparent"
                    android:layout_margin="8dp"
                    android:layout_width="48dp"
                    android:tint="@color/white"
                    android:tintMode="src_in"
                    android:foregroundGravity="center" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/category_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    android:layout_weight="1" />
            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/activity_new_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/category_details"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="4dp">

                <io.github.rathn.platap.customViews.CircleImageView
                    android:id="@+id/category_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1875"
                    android:padding="8dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_weight="1.0"
                    android:id="@+id/new_category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_category_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                android:textOff="@string/icons"
                android:textOn="@string/colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton"
                android:layout_below="@+id/category_details"
                android:layout_centerHorizontal="true"
                 />

            <GridView
                android:id="@+id/category_icons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/circle_category"
                tools:listheader="@layout/circle_category"
                tools:listfooter="@layout/circle_category"
                android:layout_below="@+id/toggleButton"
                android:numColumns="7" />

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:columnCount="5"
                app:rowCount="5"
                android:layout_below="@+id/new_category_name">

            </GridLayout>

            <TextView
                android:text="@string/icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/category_icons"
                android:layout_toLeftOf="@+id/toggleButton"
                android:layout_toStartOf="@+id/toggleButton"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/textView4"
                android:layout_alignBaseline="@+id/toggleButton" />

            <TextView
                android:text="@string/colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/category_icons"
                android:layout_toRightOf="@+id/toggleButton"
                android:layout_toEndOf="@+id/toggleButton"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:id="@+id/textView5"
                android:layout_alignBaseline="@+id/toggleButton" />
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

</layout>

